--- a/src/StyleSheet/Home.css
+++ b/src/StyleSheet/Home.css
@@ -2,3 +2,10 @@
     display: grid;
     grid-template-columns: auto auto;
 }
+
+@media only screen and (max-width: 600px) {
+    .container .grid-container {
+        display: grid;
+        grid-template-columns: auto;
+    }
+}
